testcases/error/invalid_lsb.veryl
module invalid_lsb {
    let _a: logic = lsb;
}
